
v1.2.3
-------------------
! imdb::plotoutline() did not cut surrounding DIV (backport from trunk)
! imdb::alsoknow() fixed (IMDB site changes - backport from trunk)
* imdb::movieconnection() - fixed FollowedBy and added Follows (tnx 2 Qvist)
* imdb::releaseInfo() now catches a few more cases (missing links)
! IMDB Search did not work with the localized sites due to new domains used

v1.2.2 (26.11.2009)
-------------------
! fixed an backport error (PHP5 style declaration)
! fixed runtimes() again (the IMDB guys are playing with us), and fixed mpaa_reason (both backports from trunk)
! imdb_person::filmograf() was broken due to an inserted onClick() on IMDB.COM (backport from trunk)
! fixed the imdb::trailers() method. Note that IMDB now only lists their own
  videos, so the imdb_trailers class is (currently) useless.
- removed the imdb_trailers class from checks. As IMDB seems to no longer
  list external trailers, they will either fail. The code for the class will
  remain in the repository for now - one never knows...
+ added new method imdb::keywords_all() (to retrieve the full list)

v1.2.1 (15.11.2009)
-------------------
! version info was not updated in the base class
! imdb: minor fix for releaseInfo()
! imdb::language() was broken
+ imdb::creator() method backported from trunk
! minor fix to imdbsearch class backported
+ imdbsearch: added method reset() to clean up the search results array
  (backported from trunk@r257)
! imdb::officialSites() returned a bunch of internal links not belonging here
  (backported fix from trunk@r260)
! imdb::runtimes() and imdb::sountrack() was broken (backported fix from trunk@r262)

v1.2.0 (04.10.2009)
-------------------
+ the test pages now support a "cron-mode" passing "cron=1" at the URL, i.e.
  plain text output, and only on failures (intended for automated tests)
! movie: fixed a small initialization issue (wrong type for keywords)
! movie: episodes() returned bool false (instead of empty array) if no episodes
